--- a/src/ListenTogetherMauiBlazor/ListenTogetherMauiBlazor.csproj
+++ b/src/ListenTogetherMauiBlazor/ListenTogetherMauiBlazor.csproj
@@ -20,8 +20,8 @@
 		<ApplicationIdGuid>E98DF056-A645-4113-A892-4E4FE83BE1CA</ApplicationIdGuid>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>2.0.21</ApplicationDisplayVersion>
-		<ApplicationVersion>157</ApplicationVersion>
+		<ApplicationDisplayVersion>2.0.27</ApplicationDisplayVersion>
+		<ApplicationVersion>163</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -64,8 +64,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-		<PackageReference Include="MudBlazor" Version="6.2.2" />
+		<PackageReference Include="MudBlazor" Version="6.2.5" />
 		<PackageReference Include="Sve.Blazor.InfiniteScroll" Version="1.0.0-alpha" />
 	</ItemGroup>
 	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
