--- a/src/ListenTogetherMauiBlazor/ListenTogetherMauiBlazor.csproj
+++ b/src/ListenTogetherMauiBlazor/ListenTogetherMauiBlazor.csproj
@@ -20,8 +20,8 @@
 		<ApplicationIdGuid>E98DF056-A645-4113-A892-4E4FE83BE1CA</ApplicationIdGuid>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>2.0.42</ApplicationDisplayVersion>
-		<ApplicationVersion>178</ApplicationVersion>
+		<ApplicationDisplayVersion>2.0.47</ApplicationDisplayVersion>
+		<ApplicationVersion>183</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -71,6 +71,7 @@
 	</ItemGroup>
 	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<PackageReference Include="PInvoke.User32" Version="0.7.124" />
+		<PackageReference Include="System.Management" Version="7.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
